Bugfixes: Unselect the current field when "Speichern/ Laden" or "Datensätze" was pressed and avert line break of save-, load- and newOperation-buttons (shifted the buttons to loadMenu.html).

--- a/webgis/public/css/style.css
+++ b/webgis/public/css/style.css
@@ -233,6 +233,17 @@
 		/*padding: 10px 5px 10px 5px;*/
 	}
 
+	#loadMenu{
+		top: 91%;
+		left: 54%;
+		text-decoration: none;
+		font-size: 0.8vw;
+		color: black;
+		width: 4.9%;
+		height: 4%;
+		text-align: center;
+	}
+
 	#drawTest{
 		top: 40px;
 		right: 10px;
